@@ -18,6 +18,7 @@ package org.drools.verifier.core.checks;
 
 import java.util.Arrays;
 import java.util.HashSet;
+import java.util.List;
 
 import org.drools.verifier.api.reporting.CheckType;
 import org.drools.verifier.api.reporting.Issue;
@@ -51,7 +52,7 @@ public class DetectMissingConditionCheck
                               final CheckType checkType) {
         return new Issue(severity,
                          checkType,
-                         new HashSet<>(Arrays.asList(ruleInspector.getRowIndex() + 1))
+                         new HashSet<>(List.of(ruleInspector.getRowIndex() + 1))
         );
     }
 }
