@@ -118,7 +118,7 @@ public class CompiledFEELSupport {
             if (value == null) {
                 return null;
             }
-            List list = value instanceof List ? (List) value : Arrays.asList(value);
+            List list = value instanceof List ? (List) value : List.of(value);
 
             Object f = filterExpression.apply(
                     new SilentWrappingEvaluationContextImpl(ctx)); // I need to try evaluate filter first, ignoring errors; only if evaluation fails, or is not a Number, it delegates to try `evaluateExpressionsInContext`
@@ -144,7 +144,7 @@ public class CompiledFEELSupport {
                     // In case any element fails in there or the filter expression returns null, it will only exclude the element, but will continue to process the list.
                     // In case all elements fail, the result will be an empty list.
                     Object r = filterExpression.apply(new SilentWrappingEvaluationContextImpl(ctx));
-                    if (r instanceof Boolean && r == Boolean.TRUE) {
+                    if (r == Boolean.TRUE) {
                         results.add(v);
                     }
                 } catch (Exception e) {
@@ -162,7 +162,7 @@ public class CompiledFEELSupport {
             if (value == null) {
                 return null;
             }
-            List list = value instanceof List ? (List) value : Arrays.asList(value);
+            List list = value instanceof List ? (List) value : List.of(value);
 
             if (filterIndex instanceof Number) {
                 int i = ((Number) filterIndex).intValue();
@@ -284,7 +284,7 @@ public class CompiledFEELSupport {
         }
 
         private ForIteration createQuantifiedExpressionIterationContext(EvaluationContext ctx, IterationContextCompiled icn) {
-            ForIteration fi = null;
+            ForIteration fi;
             String name = (String) icn.getName().apply(ctx);
             Object result = icn.getExpression().apply(ctx);
             Object rangeEnd = icn.getRangeEndExpr().apply(ctx);
@@ -449,7 +449,7 @@ public class CompiledFEELSupport {
     }
 
     private static Object[] toFunctionParams(Object params) {
-        Object[] invocationParams = null;
+        Object[] invocationParams;
         if (params instanceof List) {
             invocationParams = ((List) params).toArray(new Object[]{});
         } else if (params instanceof Object[]) {
