@@ -70,13 +70,13 @@ public class MultipleModelsTest extends AbstractDTAnalysisTest {
         assertThat(analysis.getGaps()).hasSize(1);
         
         @SuppressWarnings({"unchecked", "rawtypes"})
-        List<Hyperrectangle> gaps = Arrays.asList(new Hyperrectangle(1,
-                                                                     Arrays.asList(Interval.newFromBounds(new Bound("i",
-                                                                                                                    RangeBoundary.CLOSED,
-                                                                                                                    null),
-                                                                                                          new Bound("o",
-                                                                                                                    RangeBoundary.OPEN,
-                                                                                                                    null)))));
+        List<Hyperrectangle> gaps = List.of(new Hyperrectangle(1,
+                                                               List.of(Interval.newFromBounds(new Bound("i",
+                                                                                                        RangeBoundary.CLOSED,
+                                                                                                        null),
+                                                                                              new Bound("o",
+                                                                                                        RangeBoundary.OPEN,
+                                                                                                        null)))));
         assertThat(gaps).hasSize(1);
 
         // Assert GAPS
